# templ8

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  environment.yml  example.yml  jobs.yml  package.json  requirements.txt  setup.cfg  setup.py  template.yml
backend/: setup.py  spec.yml
common/: README.md  setup.py  spec.yml
common/docs/: index.rst
config/: tests.yml
core/backend/: spec.yml
core/backend/server/: Dockerfile
core/common/: README.md  setup.cfg  spec.yml
core/common/config/: common-jobs.yml
core/common/docs/: conf.py
core/common/scripts/: bdd.bash
core/frontend/: spec.yml
core/package/: README.md  commands.py  setup.cfg  setup.py  spec.yml
core/package/config/: package-jobs.yml
core/package/scripts/: clean.bash  jobs.yml
docs/: conf.py  index.rst
frontend/: spec.yml
pipeline/: spec.yml
scripts/: template.yml
templ8/: __main__.py  callback.py  cli.py  config_creator.py  config_generator.py  context.py  exceptions.py  formatters.py  generator.py  hooks.py  loaders.py  maifest.py  main.py  manifest.py  models.py  parser.py  parsers.py  spec.py  template_generator.py  utils.py  validators.py
templ8/callbacks/: callback.py
templ8/common/: README.md  environment.yml  jobs.yml  requirements.txt
templ8/hooks/: hook.py
templ8/models/: callback.py  context.py  generator.py  path_replacement.py  spec.py  templater.py
templ8/package/: .bumpversion.cfg  setup.py
templ8/server/: Dockerfile  entrypoint.bash  requirements.txt
templ8/specs/: context.py  spec.py
templ8/templater/: callback.py  context.py  options.py  path_replacement.py  scheme.py  spec.py
templ8/templates/: aliases.py  callbacks.py  formatters.py  specs.py
templ8/templates/angular/: spec.yml
templ8/templates/backend/: setup.py  spec.yml
templ8/templates/common/: README.md  environment.yml  jobs.yml  setup.py  spec.yml
templ8/templates/deploy/: docker-compose.yml  spec.yml
templ8/templates/django/: spec.yml
templ8/templates/frontend/: spec.yml
templ8/templates/package/: .bumpversion.cfg  README.md  setup.cfg  setup.py  spec.yml
templ8/templates/package/ci/: db.env  master.cfg  master.env  worker.env
templ8/templates/package/docs/: conf.py  index.rst
templ8/templates/package/pages/: package.md
templ8/templates/package/scripts/: clean_build_dirs.py  jobs.yml  prototype-bdd-tests.sh
templ8/templates/pipeline/: spec.yml
templ8/templates/server/: spec.yml
templ8/templates/webapp/: spec.yml
templ8/utils/: files.py  filter.py  formatters.py  kv.py  paths.py  prettify.py  tags.py
templ8/webapp/: Dockerfile  build.Dockerfile  docker-compose.yml  nginx.conf  package.json
templater/: main.py  models.py  utils.py
templater/common/: README.md  jobs.yml  package.json  requirements.txt
templater/package/: .bumpversion.cfg  setup.py
tests/: cli.feature  config_generation.feature  template_generation.feature  template_generation_options.feature  test_cli.py  test_config_generation.py  test_features.py  test_template_generation.py  test_template_generation_options.py
tests/configs/: simple.yml
tests/fixtures/: package_config.yml  template.yml
tests/output/: README.md  setup.cfg  setup.py
tests/output/ci/webhooks/: docs_hook.json  tests_hook.json
tests/output/docs/: conf.py  index.rst
tests/output/scripts/: jobs.yml
(+20 files in other folders)
