[metadata]
name = {{name}}
version = {{version}}

url = {{url}}
keywords = [{{keywords}}]
description = {{description}}

license = file: LICENSE.md
long-description = file: README.md

author = {{author}}
author-email = {{author_email}}

[options]
packages = find:
include_package_data = True
python_requires = >= {{python_requires}}

setup_requires = setuptools
install_requires = [{{install_requires}}]
tests_require = [{{tests_require}}]

[entry_points]
console_scripts = [{{console_scripts}}]

[cmdclass]
updateDocs = commands.UpdateDocs
generateDocs = commands.GenerateDocs

[sdist]
formats = zip, gztar

[bdist_wheel]
universal = true

[pydocstyle]
inherit = false
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
ignore = D200, D203, D213, D406, D407

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:report]
show_missing = true

[green]
verbose = 2
file-pattern = test_*.py
no-skip-report = true
quiet-stdout = true
run-coverage = true
