[metadata]
name = my_package
version = 0.1.0
description = None
url = None/None
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = None
author-email = None

keywords = []
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

# Exclude test packages
[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

# Linters
[flake8]
doctests = True
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, venv

[pydocstyle]
inherit = false
match-dir = (?!tests)(?!docs)(?!venv)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
ignore = D200, D203, D213, D406, D407

[mypy]
pretty = True
warn_return_any = True
warn_unused_configs = True

# Formatters
[isort]
line_length = 88
atomic = True
force_to_top = True
skip_glob = venv/*
