[metadata]
name = {{package_name}}
version = {{version}}
description = {{description}}
url = https://github.com/{{author_github}}/{{name}}
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = {{author}}
author-email = {{author_email}}

keywords = {{keywords}}
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: {{python_version}}

[options]
packages = find:
python_requires = >={{python_version}}
setup_requires = setuptools
include_package_data = True

# Exclude test packages
[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

# Linters
[flake8]
doctests = True
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, venv

[pydocstyle]
inherit = false
match-dir = (?!tests)(?!docs)(?!venv)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
ignore = D200, D203, D213, D406, D407

[mypy]
pretty = True
warn_return_any = True
warn_unused_configs = True

# Formatters
[isort]
line_length = 88
atomic = True
force_to_top = True
skip_glob = venv/*
